# rust_notes_api

./: Cargo.toml  README.md  diesel.toml
migrations/: 20250906193743_initial_schema.sql
migrations/2025-09-06-163844_initial_db_schema/: down.sql  up.sql
scripts/: start_dev_db.sh  test_api.sh
src/: main.rs  schema.rs
src/config/: cors.rs  database.rs  mod.rs  redis.rs  settings.rs
src/controllers/: mod.rs  notes.rs  users.rs
src/middleware/: auth.rs
src/models/: mod.rs  notes.rs  users.rs
src/repositories/: mod.rs  notes.rs  users.rs
src/services/: mod.rs  notes.rs  users.rs
src/utils/: mod.rs  passwords.rs
