[package]
name = "rust_notes_api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde-env = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.99"
dotenvy = "0.15.7"
diesel-async = { version = "0.6.1", features = ["bb8", "postgres"] }
diesel = { version = "2.2.12", features = ["postgres", "uuid", "chrono"] }
actix-session = {version = "0.11.0", features = ["redis-pool", "redis-session-rustls", "redis-session", "redis-session-native-tls"]}
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
