[package]
name = "rust_notes_api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde-env = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.99"
dotenvy = "0.15.7"
actix-session = {version = "0.11.0", features = ["redis-pool", "redis-session-rustls", "redis-session", "redis-session-native-tls"]}
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
actix-web = "4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
argon2 = "0.5.3"
serde_json = "1.0.143"
email_address = "0.2.9"
env_logger = "0.11.8"
